Removed issues reported by Sonar